<?xml version="1.0" encoding="utf-8"?>


<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:paddingTop="100dp"
    android:background="#49A699"
    android:clickable="true"
    android:focusableInTouchMode="true"
    >


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="183dp"
        android:layout_marginTop="5dp"
        app:srcCompat="@mipmap/ic_launcher" />

    <EditText
        android:id="@+id/edittext_email"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/custom_edittext_bg"
        android:hint="@string/email"
        android:textSize="20sp"
        android:drawableLeft="@drawable/ic_email"
        />

    <EditText
        android:id="@+id/edittext_password"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:background="@drawable/custom_edittext_bg"
        android:textSize="20sp"
        android:drawableLeft="@drawable/ic_password"/>

    <CheckBox
        android:id="@+id/checkbox"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="Remember me"
        android:textSize="20sp"
        />

    <Button
        android:id="@+id/button_login"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/custom_edittext_bg"
        android:hint="@string/login"
        android:textAllCaps="false"
        android:textSize="22sp"
        android:textStyle="bold"
        tools:text="LOGIN"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:text="@string/not_registered"/>

        <TextView
            android:id="@+id/textview_register"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:paddingLeft="10dp"
            android:text="@string/register"
            android:textStyle="bold" />

    </LinearLayout>


</LinearLayout>