<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"  android:layout_width="match_parent"
    >

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/register_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:paddingTop="70dp"
        android:background="#49A699"
        android:clickable="true"
        android:focusableInTouchMode="true"
        >


        <EditText
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:background="@null"
            android:gravity="center"
            android:text="Register"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="#006659"
            android:textSize="28sp"
            android:layout_marginTop="0dp"
            android:textStyle="bold"
            />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="173dp"
            android:layout_marginTop="0dp"
            app:srcCompat="@mipmap/ic_launcher" />


        <EditText
            android:id="@+id/edittext_email"
            android:layout_width="330dp"
            android:layout_height="45dp"
            android:layout_marginTop="0dp"
            android:hint="@string/email"
            android:layout_marginBottom="10dp"
            android:background="@drawable/custom_edittext_bg"
            android:textSize="20sp"
            android:drawableLeft="@drawable/ic_email"
            />


        <EditText
            android:id="@+id/edittext_firstname"
            android:layout_width="330dp"
            android:layout_height="45dp"
            android:hint="First Name"
            android:layout_marginBottom="10dp"
            android:background="@drawable/custom_edittext_bg"
            android:textSize="20sp"
            android:drawableLeft="@drawable/ic_username"
            />

        <EditText
            android:id="@+id/edittext_lastname"
            android:layout_width="330dp"
            android:layout_height="45dp"
            android:hint="Last Name"
            android:layout_marginBottom="10dp"
            android:background="@drawable/custom_edittext_bg"
            android:textSize="20sp"
            android:drawableLeft="@drawable/ic_lastname"
            />

        <EditText
            android:id="@+id/edittext_phonenumber"
            android:layout_width="330dp"
            android:layout_height="45dp"
            android:hint="Phone Number"
            android:layout_marginBottom="10dp"
            android:background="@drawable/custom_edittext_bg"
            android:textSize="20sp"
            android:drawableLeft="@drawable/ic_phone"
            />

        <EditText
            android:id="@+id/edittext_hometown"
            android:layout_width="330dp"
            android:layout_height="45dp"
            android:hint="Home Town"
            android:layout_marginBottom="10dp"
            android:background="@drawable/custom_edittext_bg"
            android:textSize="20sp"
            android:drawableLeft="@drawable/ic_hometown"
            />

        <EditText
            android:id="@+id/edittext_password"
            android:layout_width="330dp"
            android:layout_height="45dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:autofillHints=""
            android:background="@drawable/custom_edittext_bg"
            android:textSize="20sp"
            android:drawableLeft="@drawable/ic_password"
            />

        <Button
            android:id="@+id/button_register"
            android:layout_width="330dp"
            android:layout_height="50dp"
            android:layout_marginTop="25dp"
            android:background="@drawable/button_background"
            android:hint="@string/signup"
            android:textAllCaps="true"
            android:textSize="22sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:text="Already have an account?"/>

            <TextView
                android:id="@+id/textview_register"
                android:layout_width="wrap_content"
                android:layout_height="45dp"
                android:paddingLeft="10dp"
                android:textStyle="bold"
                android:text="Log in!"/>

        </LinearLayout>
    </LinearLayout>
</ScrollView>
